feat: implementa fluxo veterinário com agendamento, histórico clínico e alertas